Added placeholders to unit tests to isolate what we need/not need to test.

--- a/src/tests/README
+++ b/src/tests/README
@@ -13,6 +13,7 @@ Naming scheme
 
                 [id]%05d.vtc
 
+        id ~ ^a         --> VMOD internal errors 
         id ~ ^b         --> Basic functionality tests
         id ~ ^c         --> Complex functionality tests
         id ~ ^g         --> GZIP tests
